Some fixes and modifications...

--- a/app/src/main/assets/404.html
+++ b/app/src/main/assets/404.html
@@ -29,7 +29,7 @@
 </svg>
 <script>
     document.getElementById('cb-replay').onclick = function() {
-      window.history.go(-1); return false;
+      externalApp.tryReload(); return false;
     }
 </script>
 </body>
